--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <button onclick="addData()">Console New Data with 4th Employee</button>
     <button onclick="removeAdmin()">Remove Admin</button>
     <button onclick="concatenateArray()">Concatenate Array</button>
-    <script src="./jjj.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
